# rust-discord-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  compose.example.yml  config.example.toml  docker-compose.example.yml  renovate.json
.github/workflows/: default.yml
src/: anime.rs  basic.rs  colors.rs  config.rs  db.rs  env.rs  fun.rs  kanji.rs  localai.rs  main.rs  music.rs  sd.rs  shoko.rs  sonarr.rs  sonarr_serde.rs  tags.rs
src/ai/: localai.rs  mod.rs  sd.rs
src/anime/: mod.rs  op.rs  shoko.rs  sonarr.rs  sonarr_serde.rs
src/fixembed/: insta.rs  mod.rs  reddit.rs  twitter.rs
src/language/: chinese.rs  kanji.rs  mod.rs
src/music/: mod.rs  music.rs  musicclip.rs  play.rs
src/permissions/: mod.rs
src/random/: basic.rs  deadge.rs  fox.rs  mod.rs  response.rs  weather.rs
src/streams/: mod.rs
src/tickets/: mod.rs  ticket.rs
src/tmdb/: mod.rs  movies.rs  tv.rs
src/utility/: mod.rs  papers.rs  profile.rs  tags.rs
src/web/: mod.rs
src/web/services/: aydy.rs  channels.rs  general.rs  mod.rs  tags.rs  tickets.rs
ui/: package-lock.json  package.json
ui/src/: app.html
ui/src/lib/components/: Footer.svelte  Header.svelte
ui/src/routes/: +layout.svelte  +page.svelte  layout.css
ui/src/routes/aydy/: +page.svelte
ui/src/routes/commands/: +page.svelte
ui/src/routes/emojis/: +page.svelte
ui/src/routes/history/: +page.svelte
ui/src/routes/logging/: +page.svelte
ui/src/routes/tags/: +page.svelte
ui/src/routes/tickets/: +page.svelte
