[package]
name = "rust-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
env_logger = "0.11"
log = { version = "0.4", features = ["std"] }
poise = "0.6.1"
redb = "2.1.0"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["json"] }
rust_cast = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
strsim = "0.11.1"

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = ["builtin-queue"]

[dependencies.serenity]
version = "0.12.1"
features = ["client", "standard_framework", "voice", "rustls_backend", "cache"]

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "rt-multi-thread", "signal"]
