[package]
name = "rust-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
env_logger = "0.11"
log = { version = "0.4", features = ["std"] }
miette = "7.2.0"
poise = "0.6.1"
redb = "2.4.0"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["json"] }
rust_cast = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
strsim = "0.11.1"
reqwest-websocket = "0.3.0"
tokio-graceful-shutdown = "0.15.0"

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac", "mkv", "ogg"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = ["builtin-queue"]

[dependencies.serenity]
version = "0.12.1"
features = ["client", "standard_framework", "voice", "rustls_backend", "cache"]

[dependencies.tokio]
version = "1.43.0"
features = ["macros", "rt-multi-thread", "signal"]
