[package]
name = "rust-discord-bot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
log = { version = "0.4", features = ["std"] }
miette = "7.6.0"
poise = "0.6.1"
redb = "2.5.0"
regex = "1.11.1"
reqwest = { version = "0.13.0", features = ["json"] }
rust_cast = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
strsim = "0.11.1"
reqwest-websocket = "0.5.0"
tokio-graceful-shutdown = "0.19.0"
toml = "0.9.5"
uuid = { version = "1.11", features = ["v4"] }
yt-dlp = "1.4.7"
url = "2.5.7"
actix-web = "4.12.1"
urlencoding = "2.1.3"
actix-files = "0.6.9"
simplelog = "0.12.2"

[dependencies.symphonia]
version = "0.5.4"
features = ["aac", "mp3", "isomp4", "alac", "mkv", "ogg"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = ["builtin-queue"]

[dependencies.serenity]
version = "0.12.4"
features = ["client", "standard_framework", "voice", "rustls_backend", "cache"]

[dependencies.tokio]
version = "1.47.0"
features = ["macros", "rt-multi-thread", "signal"]
